--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="header">
       <div class="menu">
         <ul class="logocombi">
-       <li class="items"><a href="#"><img src="images/fire.png"></a></li>
+       <li class="items"><a href="#"><img src="images/fire.png" height="50px"></a></li>
         <li class="logo">Logo</li>
 
         <li class="home"><a href="#">Home</a></li>
@@ -34,5 +34,68 @@
  <button class="btn">Engage now</button>
 </div>
 </div>
+<div class="main">
+    <h3>Superior Collaboration</h3>
+    <h4>Visualize Quality</h4>
+</div>
+<hr/>
+<div>
+  <p class="mainText">Proactively envisioned multimedia based expertise and cross-media growth strategies. Seamlessly visualize quality intellectual capital without superior collaboration and idea-sharing.
+      Holistically pontificate installed base portals after maintainable products.</p>
+</div>
+<div class="blox">
+
+<div class="bloxcombo">
+<div class="blok">700 x 300</div>
+<a href="#" class="link_s">Efficiently Unleash</a>
+<p class="bloxText">Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+</div>
+<div class="bloxcombo">
+<div class="blok">700 x 300</div>
+<a href="#" class="link_s">Completely Synergize</a>
+<p class="bloxText">Dramatically maintain clicks-and-mortar solutions without functional solutions. Efficiently unleash cross-media information without cross-media value. Quickly maximize timely deliverables for real-time schemas.</p>
+</div>
+<div class="bloxcombo">
+<div class="blok">700 x 300</div>
+<a href="#" class="link_s">Dynamically Procrastinate</a>
+<p class="bloxText">Professionally cultivate one-to-one customer service with robust ideas. Completely synergize resource taxing relationships via premier niche markets. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
+</div>
+</div>
+<div class="footerText">
+  <div class="headies1">
+    <div class="it">
+  <img  class="i" src="images/fireorange.png"/>
+  <div class="lin"><strong>Dynamically Procrastinate</strong></div>
+</div>
+  <p class="bloxText">Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits.
+    Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+<button class="btnF">Procrastinate</button>
+  </div>
+  <div class="headies2">
+    <div class="it">
+  <img   class="i"src="images/logo2.png"/>
+  <div class="lin"><strong>Efficiently Unleash</strong></div>
+</div>
+  <p class="bloxText">Dramatically maintain clicks-and-mortar solutions without functional solutions. Efficiently unleash cross-media information without cross-media value. Quickly maximize timely deliverables for real-time schemas.</p>
+  <button class="btnF">Unleash</button>
+</div>
+<div class="headies3">
+  <div class="it">
+  <img   class="i" src="images/logo3.png"/>
+  <div class="lin"><strong>Completely Synergize</strong></div>
+</div>
+  <p class="bloxText">Professionally cultivate one-to-one customer service with robust ideas. Completely synergize resource taxing relationships via premier niche markets. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
+<button class="btnF">Synergize</button>
+</div>
+</div>
+<div class="footer">
+  <ul class="footerList">
+    <li><a href="#">Terms & Conditions</a> </li>|
+    <li><a href="#">Privacy Policy</a> </li>|
+    <li><a href="#">Contact</a> </li>
+</div>
+<p class="copy">
+Copyright © Example.com 2015
+</p>
   </body>
 </html>
